:bug: fix hinhThucNhapMau

--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -559,6 +559,10 @@
 				<td><label>57. Hình thức nhập mẫu:</label></td>
 				<td>
 					<input type="text" list="hinhThucNhapMau" class="input-form flexdatalist" data-min-length='0'  ng-model="data.hinhThucNhapMau" title="{{tooltips['hinhThucNhapMau']}}" name="hinhThucNhapMau">
+					<datalist id="hinhThucNhapMau">
+						<option value="Thu thập">Thu thập</option>
+						<option value="Hiến tặng">Hiến tặng</option>
+					</datalist>
 				</td>
 			</tr>
 			<tr>
