--- a/app/views/users/add-vegetable-form.template.html
+++ b/app/views/users/add-vegetable-form.template.html
@@ -415,7 +415,7 @@
 				<tr>
 					<td><label>42. Thông tin về phim, video: </label></td>
 					<td>
-						<input type="text" title="" title="{{tooltips['videoStr']}}" name="videoStr" ng-model="data.videoStr" class="input-form" >
+						<input type="text" title="{{tooltips['videoStr']}}" name="videoStr" ng-model="data.videoStr" class="input-form" >
 					</td>
 					</tr>
 				<tr>
@@ -546,8 +546,11 @@
 				<tr>
 					<td><label>56. Hình thức nhập mẫu:</label></td>
 					<td>
-						<input type="text" list="hinhThucNhapMau" class="input-form flexdatalist" data-min-length='0'  multiple='multiple' title="{{tooltips['hinhThucNhapMau']}}" ng-model="data.hinhThucNhapMau" name="hinhThucNhapMau">
-						
+						<input type="text" list="hinhThucNhapMau" class="input-form flexdatalist" data-min-length='0'  title="{{tooltips['hinhThucNhapMau']}}" ng-model="data.hinhThucNhapMau" name="hinhThucNhapMau">
+						<datalist id="hinhThucNhapMau">
+							<option value="Thu thập">Thu thập</option>
+							<option value="Hiến tặng">Hiến tặng</option>
+						</datalist>
 					</td>
 				</tr>
 
