--- a/app/views/users/edit/edit-paleontological-form.template.html
+++ b/app/views/users/edit/edit-paleontological-form.template.html
@@ -467,7 +467,7 @@
 				</tr>
 				<tr>
 					<td>Đính kèm trình tự DNA</td>
-					<td><input type="file" multiple   title="{{tooltips['dinhKemTrinhTuDNA']}}" name="dinhKemTrinhTuDNA" ng-model="data.dinhKemTrinhTuDNA" class="input-form"></td>
+					<td><input type="file" multiple   title="{{tooltips['dinhKemTrinhTuDNA']}}" name="dinhKemTrinhTuDNA" ng-model="data.dinhKemTrinhTuDNA" accept="image/*, .doc, .docx, .pdf" class="input-form"></td>
 				</tr>
 				<tr>
 					<td>Công bố/thông tin quốc tế (genbank...)</td>
