add loading overlay

--- a/app/views/users/add-paleontological-form.template.html
+++ b/app/views/users/add-paleontological-form.template.html
@@ -1,4 +1,4 @@
-<div class="" style="margin-top: 60px;">
+<div class="" style="margin-top: 60px;" class="well well-lg bs-loading-container" bs-loading-overlay bs-loading-overlay-delay="3000">
 	<form id="form-content" name="FormContent" ng-submit="addPost(FormContent, form)" novalidate>
 		<center><h2>Thêm mẫu dữ liệu cổ sinh</h2></center>
 		<div class="container map-detail" style="margin-top: 50px;">
