--- a/app/views/users/edit/edit-animal-form.template.html
+++ b/app/views/users/edit/edit-animal-form.template.html
@@ -361,8 +361,10 @@
 			<tr>
 				<td><label>31. Bản đồ:</label></td>
 				<td>
-					<input type="file" ng-model="data.banDo" id="banDo" title="{{tooltips['banDo']}}" accept=".zip, .rar" name="banDo" class="input-form">
-					<!-- <label for="banDo"><span>{{data.banDo}}</span></label> -->
+					<input type="file" id="banDo" name-old-file="{{data.banDo}}" title="{{tooltips['banDo']}}" accept=".zip, .rar" name="banDo">
+					<label for="input07">Placeholder</label>
+					<input type="file" data-name-old-file = "Hola Nguyen" id="input07">
+					<br>
 				</td>
 			</tr>
 			<tr>
@@ -648,3 +650,13 @@
 <div class="container map-detail" style="margin-top: 50px;" ng-if="status == 'error'">
 	<h2>Xuất hiện lỗi: Trangweb không tìm thấy</h2>
 </div>
+<script type="text/javascript">
+	$('#banDo').jfilestyle({
+		placeholder: document.getElementById("banDo").getAttribute("name-old-file")
+	});
+
+	$('#input07').jfilestyle({
+		placeholder: document.getElementById("input07").getAttribute("data-name-old-file")
+	});
+	
+</script>
