--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -47,6 +47,7 @@
 						<li><a href="/log">Lịch sử</a></li>
 						<li><a href="/app/#!/bai-dang">Quản lý mẫu vật</a></li>
 						<li><a href="/config">Cài đặt</a></li>
+						<li><a href="/admin">Admin</a></li>
 						<li><a href="/auth/logout">Đăng xuất</a></li>
 					</ul>
 				</li>
