Reopen signup. Fix update permissions

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,7 +21,7 @@
 						<input type="submit" name="login" id="btnSubmit" class="login loginmodal-submit" value="Đăng nhập">
 					</form>
 					<div class="login-help">
-						<!--<a href="/auth/signup">Đăng ký</a>-->
+						<a href="/auth/signup">Đăng ký</a>
 					</div>
 				</div>
 				
