--- a/app/views/users/edit/edit-paleontological-form.template.html
+++ b/app/views/users/edit/edit-paleontological-form.template.html
@@ -348,7 +348,10 @@
 				</tr>
 				<tr>
 					<td><label>28. Bản đồ:</label></td>
-					<td><input type="file" multiple title="{{tooltips['banDo']}}" name="banDo" ng-model="data.banDo" accept=".zip, .rar" class="input-form"></td>
+					<td>
+						<input type="file" multiple id="banDo" accept=".zip, .rar" name="banDo" class="inputfile customfile">
+						<label for="banDo" title="{{tooltips['banDo']}}"><span>{{data.banDo}}</span><strong>Choose file</strong></label>
+					</td>
 				</tr>
 				<tr>
 					<td><label>29. Thông tin khác:</label></td>
@@ -376,19 +379,31 @@
 				</tr>
 				<tr>
 					<td><input type="text" ng-model="data.taiLieuPhanTichStr" title="{{tooltips['taiLieuPhanTichStr']}}" name="taiLieuPhanTichStr" class="input-form" required></td>
-					<td><input type="file" multiple ng-model="data.taiLieuPhanTichFile"   title="{{tooltips['taiLieuPhanTichFile']}}" name="taiLieuPhanTichFile" accept=".doc, .docx, .pdf" class="input-form" valid-file required></td>
+					<td>
+						<input type="file" id="taiLieuPhanTichFile" multiple ng-model="data.taiLieuPhanTichFile" name="taiLieuPhanTichFile" accept=".doc, .docx, .pdf" class="inputfile customfile" valid-file required>
+						<label for="taiLieuPhanTichFile" title="{{tooltips['taiLieuPhanTichFile']}}"><span>{{data.taiLieuPhanTichFile}}</span><strong>Choose file</strong></label>
+					</td>
 				</tr>
 				<tr>
 					<td><label>34. Kết quả phân tích định tuổi: </label></td>
-					<td><input type="file" multiple   accept=".doc, .docx, .pdf" title="{{tooltips['phanTichTuoiDiaChat']}}" name="phanTichTuoiDiaChat" ng-model="data.phanTichTuoiDiaChat" class="input-form"></td>
+					<td>
+						<input type="file" id="phanTichTuoiDiaChat" multiple ng-model="data.phanTichTuoiDiaChat" name="phanTichTuoiDiaChat" accept=".doc, .docx, .pdf" class="inputfile customfile" valid-file required>
+						<label for="phanTichTuoiDiaChat" title="{{tooltips['phanTichTuoiDiaChat']}}"><span>{{data.phanTichTuoiDiaChat}}</span><strong>Choose file</strong></label>
+					</td>
 				</tr>
 				<tr>
 					<td><label>35. Đặc điểm vi cấu trúc: </label></td>
-					<td><input type="file" multiple   accept=".doc, .docx, .pdf" title="{{tooltips['dacDiemViCauTruc']}}" name="dacDiemViCauTruc" ng-model="data.dacDiemViCauTruc" class="input-form"></td>
+					<td>
+						<input type="file" id="dacDiemViCauTruc" multiple ng-model="data.dacDiemViCauTruc" name="dacDiemViCauTruc" accept=".doc, .docx, .pdf" class="inputfile customfile" valid-file required>
+						<label for="dacDiemViCauTruc" title="{{tooltips['dacDiemViCauTruc']}}"><span>{{data.dacDiemViCauTruc}}</span><strong>Choose file</strong></label>
+					</td>
 				</tr>
 				<tr>
 					<td><label>36. Đặc điểm lát mỏng: </label></td>
-					<td><input type="file" multiple   accept=".doc, .docx, .pdf" title="{{tooltips['dacDiemLatMong']}}" name="dacDiemLatMong" ng-model="data.dacDiemLatMong" class="input-form"></td>
+					<td>
+						<input type="file" id="dacDiemLatMong" multiple ng-model="data.dacDiemLatMong" name="dacDiemLatMong" accept=".doc, .docx, .pdf" class="inputfile customfile" valid-file required>
+						<label for="dacDiemLatMong" title="{{tooltips['dacDiemLatMong']}}"><span>{{data.dacDiemLatMong}}</span><strong>Choose file</strong></label>
+					</td>
 				</tr>
 				<tr>
 					<td><label>37. Mô tả/đặc điểm hình thái  <span class="has-required">(*)</span></label></td>
@@ -396,7 +411,10 @@
 				</tr>
 				<tr>
 					<td><label>38. Hình vẽ:</label></td>
-					<td><input type="file" multiple title="{{tooltips['hinhVe']}}" name="hinhVe" ng-model="data.hinhVe" class="input-form" accept="image/*, .pdf" valid-image></td>
+					<td>
+						<input type="file" multiple ng-model="data.hinhVe" id="hinhVe" name="hinhVe" class="inputfile customfile" accept="image/*, .docx, .doc, .pdf" valid-image>
+						<label for="hinhVe" title="{{tooltips['hinhVe']}}"><span>{{data.hinhVe}}</span><strong>Choose file</strong></label>
+					</td>
 				</tr>
 				<tr>
 					<td><label>39. Thông tin khác:</label></td>
@@ -409,11 +427,17 @@
 				<h3 class="h3-title">NHÓM DỮ LIỆU HÌNH ẢNH, PHIM, TÀI LIỆU MẪU VẬT</h3>
 				<tr>
 					<td><label>40. Ảnh mẫu vật  <span class="has-required">(*)</span>:</label></td>
-					<td><input type="file" multiple   title="{{tooltips['anhMauVat']}}" name="anhMauVat" ng-model="data.anhMauVat" class="input-form" accept="image/*" valid-file required></td>
+					<td>
+						<input type="file" multiple id="anhMauVat" ng-model="data.anhMauVat" name="anhMauVat" class="inputfile customfile" accept="image/*" valid-file required>
+						<label for="anhMauVat" title="{{tooltips['anhMauVat']}}"><span>{{data.anhMauVat}}</span><strong>Choose file</strong></label>
+					</td>
 				</tr>
 				<tr>
 					<td><label>41. Hình ảnh mẫu ngoài thực địa:</label></td>
-					<td><input type="file" multiple accept="image/*" valid-file   title="{{tooltips['hinhAnhNgoaiThucDia']}}" name="hinhAnhNgoaiThucDia" ng-model="data.hinhAnhNgoaiThucDia" class="input-form"></td>
+					<td>
+						<input type="file" multiple id="hinhAnhNgoaiThucDia" accept="image/*" valid-file ng-model="data.hinhAnhNgoaiThucDia" name="hinhAnhNgoaiThucDia" class="inputfile customfile">
+						<label for="hinhAnhNgoaiThucDia" title="{{tooltips['hinhAnhNgoaiThucDia']}}"><span>{{data.hinhAnhNgoaiThucDia}}</span><strong>Choose file</strong></label>
+					</td>
 				</tr>
 				<tr>
 					<td><label>42. Thông tin về phim, video: </label></td>
@@ -424,21 +448,30 @@
 				<tr>
 					<td><label>43. Đính kèm phim, video:</label></td>
 					<td>
-						<input type="file" multiple accept="video/*" name ="videoFile" ng-model="data.videoFile" class="input-form">
+						<input type="file" multiple accept="video/*" name ="videoFile" ng-model="data.videoFile" id="videoFile" class="inputfile customfile">
+						<label for="videoFile" title="{{tooltips['videoFile']}}"><span>{{data.videoFile}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr><td><label>44. Xử lý chế tác mẫu vật: </label></td></tr>
 				<tr>
 					<td>Hình ảnh đính kèm Xử lý chế tác:</td>
-					<td><input type="file" multiple   title="{{tooltips['hinhAnhDinhKem']}}" name="hinhAnhDinhKem" ng-model="data.hinhAnhDinhKem" accept="image/*" valid-image class="input-form"></td>
+					<td>
+						<input type="file" multiple id="hinhAnhDinhKem" ng-model="data.hinhAnhDinhKem" name="hinhAnhDinhKem" accept="image/*" valid-image class="inputfile customfile">
+						<label for="hinhAnhDinhKem" title="{{tooltips['hinhAnhDinhKem']}}"><span>{{data.hinhAnhDinhKem}}</span><strong>Choose file</strong></label>
+					</td>
 				</tr>
 				<tr>
 					<td>Đính kèm Xử lý chế tác:</td>
-					<td><input type="file" multiple   title="{{tooltips['dinhKemXuLyCheTac']}}" name="dinhKemXuLyCheTac" ng-model="data.dinhKemXuLyCheTac" accept=".docx, .doc, .pdf" class="input-form"></td>
+					<td>
+						<input type="file" multiple ng-model="data.dinhKemXuLyCheTac" id="dinhKemXuLyCheTac" accept=".docx, .doc, .pdf" name="dinhKemXuLyCheTac" class="inputfile customfile">
+						<label for="dinhKemXuLyCheTac" title="{{tooltips['dinhKemXuLyCheTac']}}"><span>{{data.dinhKemXuLyCheTac}}</span><strong>Choose file</strong></label>
+					</td>
 				</tr>
 				<tr>
 					<td>Thuộc tính Xử lý chế tác:</td>
-					<td><input type="text" title="{{tooltips['thuocTinhXuLyCheTac']}}" name="thuocTinhXuLyCheTac" ng-model="data.thuocTinhXuLyCheTac" class="input-form"></td>
+					<td>
+						<input type="text" id="thuocTinhXuLy" name="thuocTinhXuLy" ng-model="data.thuocTinhXuLy" title="{{tooltips['thuocTinhXuLy']}}" class="input-form">
+					</td>
 				</tr>
 				<tr>
 					<td>Phương thức xử lý chế tác:</td>
@@ -458,7 +491,10 @@
 				</tr>
 				<tr>
 					<td>Ảnh mẫu sau chế tác:</td>
-					<td><input type="file" multiple title="{{tooltips['anhMauSauCheTac']}}" name="anhMauSauCheTac" ng-model="data.anhMauSauCheTac" class="input-form" accept="image/*" valid-image></td>
+					<td>
+						<input type="file" id="anhMauSauCheTac" multiple ng-model="data.anhMauSauCheTac" name="anhMauSauCheTac" class="inputfile customfile" accept="image/*" valid-image>
+						<label for="anhMauSauCheTac" title="{{tooltips['anhMauSauCheTac']}}"><span>{{data.anhMauSauCheTac}}</span><strong>Choose file</strong></label>
+					</td>
 				</tr>
 				<tr><td><label>45. Thông tin DNA</label></td></tr>
 				<tr>
@@ -471,7 +507,10 @@
 				</tr>
 				<tr>
 					<td>Đính kèm trình tự DNA</td>
-					<td><input type="file" multiple title="{{tooltips['dinhKemTrinhTuDNA']}}" name="dinhKemTrinhTuDNA" ng-model="data.dinhKemTrinhTuDNA" accept=".doc, .docx, .pdf" class="input-form"></td>
+					<td>
+						<input type="file" multiple ng-model="data.dinhKemTrinhTuDNA" id="dinhKemTrinhTuDNA" name="dinhKemTrinhTuDNA" accept=".doc, .docx, .pdf" class="inputfile customfile">
+						<label for="dinhKemTrinhTuDNA" title="{{tooltips['dinhKemTrinhTuDNA']}}"><span>{{data.dinhKemTrinhTuDNA}}</span><strong>Choose file</strong></label>
+					</td>
 				</tr>
 				<tr>
 					<td>Công bố/thông tin quốc tế (genbank...)</td>
@@ -494,7 +533,8 @@
 						<input type="text" title="{{tooltips['phanBoVietNamStr']}}" name="phanBoVietNamStr" ng-model="data.phanBoVietNamStr" class="input-form">
 					</td>
 					<td>
-						<input type="file" multiple   title="{{tooltips['phanBoVietNamFile']}}" name ="phanBoVietNamFile" class="input-form" ng-model="data.phanBoVietNamFile">
+						<input type="file" multiple ng-model="data.phanBoVietNamFile" class="inputfile customfile" id="phanBoVietNamFile" name ="phanBoVietNamFile">
+						<label for="phanBoVietNamFile" title="{{tooltips['phanBoVietNamFile']}}"><span>{{data.phanBoVietNamFile}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
@@ -505,8 +545,9 @@
 						<input type="text" title="{{tooltips['phanBoTrenTheGioiStr']}}" name="phanBoTrenTheGioiStr" ng-model="data.phanBoTrenTheGioiStr" class="input-form">
 					</td>
 					<td>
-						<input type="file" multiple   title="{{tooltips['phanBoTrenTheGioiFile']}}" name ="phanBoTrenTheGioiFile" class="input-form" ng-model="data.phanBoTrenTheGioiFile">
-					</td>
+							<input type="file" id="phanBoTrenTheGioiFile" multiple ng-model="data.phanBoTrenTheGioiFile" class="inputfile customfile" name ="phanBoTrenTheGioiFile">
+							<label for="phanBoTrenTheGioiFile" title="{{tooltips['phanBoTrenTheGioiFile']}}"><span>{{data.phanBoTrenTheGioiFile}}</span><strong>Choose file</strong></label>
+						</td>
 				</tr>
 				<tr>
 					<td><label>49. Giá trị sử dụng (tài nguyên)(nếu có):</label></td>
@@ -601,11 +642,17 @@
 				</tr>
 				<tr>
 					<td><label>60. Giấy phép nhập mẫu:</label></td>
-					<td><input type="file" multiple title="{{tooltips['giayPhepNhapMau']}}" name="giayPhepNhapMau" ng-model="data.giayPhepNhapMau" class="input-form" accept="image/*, .pdf"></td>
+					<td>
+						<input type="file" multiple id="giayPhepNhapMau" ng-model="data.giayPhepNhapMau" name="giayPhepNhapMau" class="inputfile customfile" accept="image/*, .pdf">
+						<label for="giayPhepNhapMau" title="{{tooltips['giayPhepNhapMau']}}"><span>{{data.giayPhepNhapMau}}</span><strong>Choose file</strong></label>
+					</td>
 				</tr>
 				<tr>
 					<td><label>61. Hồ sơ nhập mẫu vật đi kèm:</label></td>
-					<td><input type="file" multiple title="{{tooltips['hoSoNhapMauVatDiKem']}}" name="hoSoNhapMauVatDiKem" ng-model="data.hoSoNhapMauVatDiKem" class="input-form" accept=".doc, .docx, .pdf" ></td>
+					<td>
+						<input type="file" multiple ng-model="data.hoSoNhapMauVatDiKem" id="hoSoNhapMauVatDiKem" name="hoSoNhapMauVatDiKem" class="inputfile customfile" accept=".doc, .docx, .pdf">
+						<label for="hoSoNhapMauVatDiKem" title="{{tooltips['hoSoNhapMauVatDiKem']}}"><span>{{data.hoSoNhapMauVatDiKem}}</span><strong>Choose file</strong></label>
+					</td>
 				</tr>
 				<tr>
 					<td><label>62. Người lập phiếu mẫu vật  <span class="has-required">(*)</span>:</label></td>
