--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -259,29 +259,16 @@
 									<%= user.fullname %> - Web Developer
 									<small>Member since Nov. 2012</small>
 								</p>
+
 							</li>
-							<!-- Menu Body -->
-							<li class="user-body">
-								<div class="row">
-									<div class="col-xs-4 text-center">
-										<a href="#">Followers</a>
-									</div>
-									<div class="col-xs-4 text-center">
-										<a href="#">Sales</a>
-									</div>
-									<div class="col-xs-4 text-center">
-										<a href="#">Friends</a>
-									</div>
-								</div>
-								<!-- /.row -->
-							</li>
+							
 							<!-- Menu Footer-->
-							<li class="user-footer">
+							<li class="user-body bg-success">
 								<div class="pull-left">
-									<a href="/home" class="btn btn-default btn-flat">Home</a>
+									<a href="/home" class="btn btn-success btn-flat">Home</a>
 								</div>
 								<div class="pull-right">
-									<a href="/auth/logout" class="btn btn-default btn-flat">Sign out</a>
+									<a href="/auth/logout" class="btn btn-warning btn-flat">Sign out</a>
 								</div>
 							</li>
 						</ul>
