--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -28,9 +28,9 @@
 					<% } %>
 
 					<% if (typeof(path) != 'undefined' && !path.localeCompare('/log/')) { %>
-						<li class="active"><a href="/log">Lịch sử</a></li>
+						<li class="active"><a href="/log/all">Lịch sử</a></li>
 					<% } else { %>
-						<li><a href="/log">Lịch sử</a></li>
+						<li><a href="/log/all">Lịch sử</a></li>
 					<% } %>-->
 					<li><a href="/app/#!/co-sinh">Cổ sinh</a></li>
 					<li><a href="/app/#!/dia-chat">Địa chất</a></li>
@@ -44,7 +44,7 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= user.fullname %> </a>
 					<ul class="dropdown-menu">
-						<li><a href="/log">Lịch sử</a></li>
+						<li><a href="/log/all">Lịch sử</a></li>
 						<li><a href="/app/#!/bai-dang">Quản lý mẫu vật</a></li>
 						<li><a href="/config">Cài đặt</a></li>
 						<li><a href="/admin">Admin</a></li>
