--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -240,6 +240,9 @@
 														<ul class="dropdown-menu">
 															<li><a style="color: #000" href="#" onclick="assignTo('<%= u._id %>')">Assign to</a></li>
 															<li><a style="color: #000" href="#" onclick="grantManager('<%= u._id %>')">Grant Manager Role on</a></li>
+															<% if (u.level.name == 'Normal User') { %>
+															<li><a style="color: #000" href="#" onclick="fire('<%= u._id %>')">Fire</a></li>
+															<% } %>
 														</ul>
 													</div>
 													<!-- /btn-group -->
@@ -594,6 +597,32 @@
 			data: {
 				userId: userId,
 				maDeTai: maDeTai
+			},
+			success: function (data) {
+				// console.log('success');
+				// console.log(data);
+				if (data.status == 'success'){
+					alert('Cập nhật thành công. Trang sẽ tự reload sau 1s.')
+				}
+				setTimeout(function () {
+					window.location.reload(true);
+				}, 1000);
+			},
+			error: function (err) {
+				// console.log('error');
+				// console.log(err);
+				alert(err.responseJSON.error)
+			}
+		})
+	}
+
+	function fire(userId) {
+		
+		$.ajax({
+			url: '/admin/fire/',
+			method: 'POST',
+			data: {
+				userId: userId
 			},
 			success: function (data) {
 				// console.log('success');
