fix display date

--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -185,7 +185,7 @@
 										<td><%= u.fullname %></td>
 										<td><span class="<%= u.level.class %>" title="<%= u.maDeTai %>"><%= u.level.name %></span></td>
 										<% var date = new Date(u.lastLogin) %>
-										<td><%= (date != 'Invalid Date') ? [date.getDate(), date.getMonth() + 1, date.getFullYear()].join('/') + ', ' + [date.getHours(), date.getMinutes(), date.getSeconds()].join(':') : '' %></td>
+										<td><%= (date != 'Invalid Date') ? [date.getFullYear(), date.getMonth() + 1, date.getDate()].join('/') + ', ' + [date.getHours(), date.getMinutes(), date.getSeconds()].join(':') : '' %></td>
 										<% if (u.level.name == 'Admin') { %>
 											<td>
 												<% if (u._id == user._id) { %>
