--- a/app/views/users/edit/edit-land-form.template.html
+++ b/app/views/users/edit/edit-land-form.template.html
@@ -327,14 +327,14 @@
 					<td><label>36. Bản đồ:</label></td>
 					<td>
 						<input type="file" multiple id="banDo" accept=".zip, .rar" name="banDo" class="inputfile customfile">
-						<label for="banDo" title="{{tooltips['banDo']}}"><span>{{data.banDo}}</span><strong>Choose file</strong></label>
+						<label for="banDo" title="{{tooltips['banDo']}}"><span>{{getName(data.banDo)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
 					<td><label>37. Kết quả phân tích định tuổi: </label></td>
 					<td>
 						<input type="file" multiple id="ketQuaPhanTichDinhTuoi" name="ketQuaPhanTichDinhTuoi" class="inputfile customfile" accept=".doc, .docx, .pdf">
-						<label for="ketQuaPhanTichDinhTuoi" title="{{tooltips['ketQuaPhanTichDinhTuoi']}}"><span>{{data.ketQuaPhanTichDinhTuoi}}</span><strong>Choose file</strong></label>
+						<label for="ketQuaPhanTichDinhTuoi" title="{{tooltips['ketQuaPhanTichDinhTuoi']}}"><span>{{getName(data.ketQuaPhanTichDinhTuoi)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
@@ -354,14 +354,14 @@
 					<td><label>40. Hồ sơ phân tích mẫu đất:</label></td>
 					<td>
 						<input type="file" multiple id="hoSoPhanTichMauDat" name="hoSoPhanTichMauDat" class="inputfile customfile" max-file-size="10" accept=".doc, .docx, .pdf">
-						<label for="hoSoPhanTichMauDat" title="{{tooltips['hoSoPhanTichMauDat']}}"><span>{{data.hoSoPhanTichMauDat}}</span><strong>Choose file</strong></label>
+						<label for="hoSoPhanTichMauDat" title="{{tooltips['hoSoPhanTichMauDat']}}"><span>{{getName(data.hoSoPhanTichMauDat)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
 					<td><label>41. Kết quả phân tích <span class="has-required">(*)</span>:</label></td>
 					<td>
 						<input type="file" multiple id="ketQuaPhanTich" name="ketQuaPhanTich" class="inputfile customfile" accept=".doc, .docx, .pdf" max-file-size="10" required>
-						<label for="ketQuaPhanTich" title="{{tooltips['ketQuaPhanTich']}}"><span>{{data.ketQuaPhanTich}}</span><strong>Choose file</strong></label>
+						<label for="ketQuaPhanTich" title="{{tooltips['ketQuaPhanTich']}}"><span>{{getName(data.ketQuaPhanTich)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
@@ -383,7 +383,7 @@
 					<td><input type="text" ng-model="data.taiLieuPhanTichStr" title="{{tooltips['taiLieuPhanTichStr']}}" name="taiLieuPhanTichStr" class="input-form" required></td>
 					<td>
 						<input type="file" id="taiLieuPhanTichFile" multiple ng-model="data.taiLieuPhanTichFile" name="taiLieuPhanTichFile" accept=".doc, .docx, .pdf" class="inputfile customfile" max-file-size="10" required>
-						<label for="taiLieuPhanTichFile" title="{{tooltips['taiLieuPhanTichFile']}}"><span>{{data.taiLieuPhanTichFile}}</span><strong>Choose file</strong></label>
+						<label for="taiLieuPhanTichFile" title="{{tooltips['taiLieuPhanTichFile']}}"><span>{{getName(data.taiLieuPhanTichFile)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
@@ -399,14 +399,14 @@
 					<td><label>47. Ảnh mẫu vật <span class="has-required">(*)</span>:</label></td>
 					<td>
 						<input type="file" multiple id="anhMauVat" ng-model="data.anhMauVat" name="anhMauVat" class="inputfile customfile" accept="image/*" max-file-size="10" required>
-						<label for="anhMauVat" title="{{tooltips['anhMauVat']}}"><span>{{data.anhMauVat}}</span><strong>Choose file</strong></label>
+						<label for="anhMauVat" title="{{tooltips['anhMauVat']}}"><span>{{getName(data.anhMauVat)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
 					<td><label>48. Hình ảnh mẫu ngoài thực địa:</label></td>
 					<td>
 						<input type="file" multiple id="hinhAnhNgoaiThucDia" accept="image/*" max-file-size="10" ng-model="data.hinhAnhNgoaiThucDia" name="hinhAnhNgoaiThucDia" class="inputfile customfile">
-						<label for="hinhAnhNgoaiThucDia" title="{{tooltips['hinhAnhNgoaiThucDia']}}"><span>{{data.hinhAnhNgoaiThucDia}}</span><strong>Choose file</strong></label>
+						<label for="hinhAnhNgoaiThucDia" title="{{tooltips['hinhAnhNgoaiThucDia']}}"><span>{{getName(data.hinhAnhNgoaiThucDia)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 			<tr>
@@ -419,7 +419,7 @@
 				<td><label>50. Đính kèm phim, video:</label></td>
 				<td>
 					<input type="file" multiple accept="video/*" name ="videoFile" ng-model="data.videoFile" id="videoFile" class="inputfile customfile">
-					<label for="videoFile" title="{{tooltips['videoFile']}}"><span>{{data.videoFile}}</span><strong>Choose file</strong></label>
+					<label for="videoFile" title="{{tooltips['videoFile']}}"><span>{{getName(data.videoFile)}}</span><strong>Choose file</strong></label>
 				</td>
 			</tr>
 				<tr><td><label>51. Xử lý chế tác mẫu vật: </label></td></tr>
@@ -427,14 +427,14 @@
 					<td>Hình ảnh đính kèm Xử lý chế tác:</td>
 					<td>
 						<input type="file" multiple id="hinhAnhDinhKem" ng-model="data.hinhAnhDinhKem" name="hinhAnhDinhKem" accept="image/*" max-file-size="5" class="inputfile customfile">
-						<label for="hinhAnhDinhKem" title="{{tooltips['hinhAnhDinhKem']}}"><span>{{data.hinhAnhDinhKem}}</span><strong>Choose file</strong></label>
+						<label for="hinhAnhDinhKem" title="{{tooltips['hinhAnhDinhKem']}}"><span>{{getName(data.hinhAnhDinhKem)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
 					<td>Đính kèm Xử lý chế tác:</td>
 					<td>
 						<input type="file" multiple ng-model="data.dinhKemXuLyCheTac" id="dinhKemXuLyCheTac" accept=".docx, .doc, .pdf" name="dinhKemXuLyCheTac" class="inputfile customfile">
-						<label for="dinhKemXuLyCheTac" title="{{tooltips['dinhKemXuLyCheTac']}}"><span>{{data.dinhKemXuLyCheTac}}</span><strong>Choose file</strong></label>
+						<label for="dinhKemXuLyCheTac" title="{{tooltips['dinhKemXuLyCheTac']}}"><span>{{getName(data.dinhKemXuLyCheTac)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
@@ -461,7 +461,7 @@
 					<td><label>52. Tài liệu đi kèm <span class="has-required">(*)</span>:</label></td>
 					<td>
 						<input type="file" multiple ng-model="data.taiLieuDiKem" id="taiLieuDiKem" accept=".docx, .doc, .pdf" max-file-size="10" required name="taiLieuDiKem" class="inputfile customfile">
-						<label for="taiLieuDiKem" title="{{tooltips['taiLieuDiKem']}}"><span>{{data.taiLieuDiKem}}</span><strong>Choose file</strong></label>
+						<label for="taiLieuDiKem" title="{{tooltips['taiLieuDiKem']}}"><span>{{getName(data.taiLieuDiKem)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
@@ -482,7 +482,7 @@
 					</td>
 					<td>
 						<input type="file" multiple ng-model="data.phanBoVietNamFile" class="inputfile customfile" id="phanBoVietNamFile" name ="phanBoVietNamFile">
-						<label for="phanBoVietNamFile" title="{{tooltips['phanBoVietNamFile']}}"><span>{{data.phanBoVietNamFile}}</span><strong>Choose file</strong></label>
+						<label for="phanBoVietNamFile" title="{{tooltips['phanBoVietNamFile']}}"><span>{{getName(data.phanBoVietNamFile)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
@@ -494,7 +494,7 @@
 					</td>
 					<td>
 						<input type="file" id="phanBoTrenTheGioiFile" multiple ng-model="data.phanBoTrenTheGioiFile" class="inputfile customfile" name ="phanBoTrenTheGioiFile">
-						<label for="phanBoTrenTheGioiFile" title="{{tooltips['phanBoTrenTheGioiFile']}}"><span>{{data.phanBoTrenTheGioiFile}}</span><strong>Choose file</strong></label>
+						<label for="phanBoTrenTheGioiFile" title="{{tooltips['phanBoTrenTheGioiFile']}}"><span>{{getName(data.phanBoTrenTheGioiFile)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
@@ -592,14 +592,14 @@
 					<td><label>67. Giấy phép nhập mẫu:</label></td>
 					<td>
 						<input type="file" multiple id="giayPhepNhapMau" ng-model="data.giayPhepNhapMau" name="giayPhepNhapMau" class="inputfile customfile" accept="image/*, .pdf">
-						<label for="giayPhepNhapMau" title="{{tooltips['giayPhepNhapMau']}}"><span>{{data.giayPhepNhapMau}}</span><strong>Choose file</strong></label>
+						<label for="giayPhepNhapMau" title="{{tooltips['giayPhepNhapMau']}}"><span>{{getName(data.giayPhepNhapMau)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
 					<td><label>68. Hồ sơ nhập mẫu vật đi kèm:</label></td>
 					<td>
 						<input type="file" multiple ng-model="data.hoSoNhapMauVatDiKem" id="hoSoNhapMauVatDiKem" name="hoSoNhapMauVatDiKem" class="inputfile customfile" accept=".doc, .docx, .pdf">
-						<label for="hoSoNhapMauVatDiKem" title="{{tooltips['hoSoNhapMauVatDiKem']}}"><span>{{data.hoSoNhapMauVatDiKem}}</span><strong>Choose file</strong></label>
+						<label for="hoSoNhapMauVatDiKem" title="{{tooltips['hoSoNhapMauVatDiKem']}}"><span>{{getName(data.hoSoNhapMauVatDiKem)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
