--- a/app/views/users/edit/edit-paleontological-form.template.html
+++ b/app/views/users/edit/edit-paleontological-form.template.html
@@ -8,7 +8,6 @@
 					<td><label >Mã đề tài  <span class="has-required">(*)</span>: </label></td>
 					<td>
 						<input type="text" name="maDeTai" ng-model="data.maDeTai" class="input-form" required>
-						<!-- <ng-include src="/app/views/errors/err.blade.html" scope="" onload=""></ng-include> -->
 					</td>
 				</tr>
 			</table>
@@ -350,7 +349,7 @@
 					<td><label>28. Bản đồ:</label></td>
 					<td>
 						<input type="file" multiple id="banDo" accept=".zip, .rar" name="banDo" class="inputfile customfile">
-						<label for="banDo" title="{{tooltips['banDo']}}"><span>{{data.banDo}}</span><strong>Choose file</strong></label>
+						<label for="banDo" title="{{tooltips['banDo']}}"><span>{{getName(data.banDo)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
@@ -381,28 +380,28 @@
 					<td><input type="text" ng-model="data.taiLieuPhanTichStr" title="{{tooltips['taiLieuPhanTichStr']}}" name="taiLieuPhanTichStr" class="input-form" required></td>
 					<td>
 						<input type="file" id="taiLieuPhanTichFile" multiple ng-model="data.taiLieuPhanTichFile" name="taiLieuPhanTichFile" accept=".doc, .docx, .pdf" class="inputfile customfile" max-file-size="10" required>
-						<label for="taiLieuPhanTichFile" title="{{tooltips['taiLieuPhanTichFile']}}"><span>{{data.taiLieuPhanTichFile}}</span><strong>Choose file</strong></label>
+						<label for="taiLieuPhanTichFile" title="{{tooltips['taiLieuPhanTichFile']}}"><span>{{getName(data.taiLieuPhanTichFile)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
 					<td><label>34. Kết quả phân tích định tuổi: </label></td>
 					<td>
 						<input type="file" id="phanTichTuoiDiaChat" multiple ng-model="data.phanTichTuoiDiaChat" name="phanTichTuoiDiaChat" accept=".doc, .docx, .pdf" class="inputfile customfile" max-file-size="10" required>
-						<label for="phanTichTuoiDiaChat" title="{{tooltips['phanTichTuoiDiaChat']}}"><span>{{data.phanTichTuoiDiaChat}}</span><strong>Choose file</strong></label>
+						<label for="phanTichTuoiDiaChat" title="{{tooltips['phanTichTuoiDiaChat']}}"><span>{{getName(data.phanTichTuoiDiaChat)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
 					<td><label>35. Đặc điểm vi cấu trúc: </label></td>
 					<td>
 						<input type="file" id="dacDiemViCauTruc" multiple ng-model="data.dacDiemViCauTruc" name="dacDiemViCauTruc" accept=".doc, .docx, .pdf" class="inputfile customfile" max-file-size="10" required>
-						<label for="dacDiemViCauTruc" title="{{tooltips['dacDiemViCauTruc']}}"><span>{{data.dacDiemViCauTruc}}</span><strong>Choose file</strong></label>
+						<label for="dacDiemViCauTruc" title="{{tooltips['dacDiemViCauTruc']}}"><span>{{getName(data.dacDiemViCauTruc)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
 					<td><label>36. Đặc điểm lát mỏng: </label></td>
 					<td>
 						<input type="file" id="dacDiemLatMong" multiple ng-model="data.dacDiemLatMong" name="dacDiemLatMong" accept=".doc, .docx, .pdf" class="inputfile customfile" max-file-size="10" required>
-						<label for="dacDiemLatMong" title="{{tooltips['dacDiemLatMong']}}"><span>{{data.dacDiemLatMong}}</span><strong>Choose file</strong></label>
+						<label for="dacDiemLatMong" title="{{tooltips['dacDiemLatMong']}}"><span>{{getName(data.dacDiemLatMong)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
@@ -413,7 +412,7 @@
 					<td><label>38. Hình vẽ:</label></td>
 					<td>
 						<input type="file" multiple ng-model="data.hinhVe" id="hinhVe" name="hinhVe" class="inputfile customfile" accept="image/*, .docx, .doc, .pdf" max-file-size="5">
-						<label for="hinhVe" title="{{tooltips['hinhVe']}}"><span>{{data.hinhVe}}</span><strong>Choose file</strong></label>
+						<label for="hinhVe" title="{{tooltips['hinhVe']}}"><span>{{getName(data.hinhVe)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
@@ -429,14 +428,14 @@
 					<td><label>40. Ảnh mẫu vật  <span class="has-required">(*)</span>:</label></td>
 					<td>
 						<input type="file" multiple id="anhMauVat" ng-model="data.anhMauVat" name="anhMauVat" class="inputfile customfile" accept="image/*" max-file-size="10" required>
-						<label for="anhMauVat" title="{{tooltips['anhMauVat']}}"><span>{{data.anhMauVat}}</span><strong>Choose file</strong></label>
+						<label for="anhMauVat" title="{{tooltips['anhMauVat']}}"><span>{{getName(data.anhMauVat)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
 					<td><label>41. Hình ảnh mẫu ngoài thực địa:</label></td>
 					<td>
 						<input type="file" multiple id="hinhAnhNgoaiThucDia" accept="image/*" max-file-size="10" ng-model="data.hinhAnhNgoaiThucDia" name="hinhAnhNgoaiThucDia" class="inputfile customfile">
-						<label for="hinhAnhNgoaiThucDia" title="{{tooltips['hinhAnhNgoaiThucDia']}}"><span>{{data.hinhAnhNgoaiThucDia}}</span><strong>Choose file</strong></label>
+						<label for="hinhAnhNgoaiThucDia" title="{{tooltips['hinhAnhNgoaiThucDia']}}"><span>{{getName(data.hinhAnhNgoaiThucDia)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
@@ -449,7 +448,7 @@
 					<td><label>43. Đính kèm phim, video:</label></td>
 					<td>
 						<input type="file" multiple accept="video/*" name ="videoFile" ng-model="data.videoFile" id="videoFile" class="inputfile customfile">
-						<label for="videoFile" title="{{tooltips['videoFile']}}"><span>{{data.videoFile}}</span><strong>Choose file</strong></label>
+						<label for="videoFile" title="{{tooltips['videoFile']}}"><span>{{getName(data.videoFile)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr><td><label>44. Xử lý chế tác mẫu vật: </label></td></tr>
@@ -457,14 +456,14 @@
 					<td>Hình ảnh đính kèm Xử lý chế tác:</td>
 					<td>
 						<input type="file" multiple id="hinhAnhDinhKem" ng-model="data.hinhAnhDinhKem" name="hinhAnhDinhKem" accept="image/*" max-file-size="5" class="inputfile customfile">
-						<label for="hinhAnhDinhKem" title="{{tooltips['hinhAnhDinhKem']}}"><span>{{data.hinhAnhDinhKem}}</span><strong>Choose file</strong></label>
+						<label for="hinhAnhDinhKem" title="{{tooltips['hinhAnhDinhKem']}}"><span>{{getName(data.hinhAnhDinhKem)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
 					<td>Đính kèm Xử lý chế tác:</td>
 					<td>
 						<input type="file" multiple ng-model="data.dinhKemXuLyCheTac" id="dinhKemXuLyCheTac" accept=".docx, .doc, .pdf" name="dinhKemXuLyCheTac" class="inputfile customfile">
-						<label for="dinhKemXuLyCheTac" title="{{tooltips['dinhKemXuLyCheTac']}}"><span>{{data.dinhKemXuLyCheTac}}</span><strong>Choose file</strong></label>
+						<label for="dinhKemXuLyCheTac" title="{{tooltips['dinhKemXuLyCheTac']}}"><span>{{getName(data.dinhKemXuLyCheTac)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
@@ -493,7 +492,7 @@
 					<td>Ảnh mẫu sau chế tác:</td>
 					<td>
 						<input type="file" id="anhMauSauCheTac" multiple ng-model="data.anhMauSauCheTac" name="anhMauSauCheTac" class="inputfile customfile" accept="image/*" max-file-size="5">
-						<label for="anhMauSauCheTac" title="{{tooltips['anhMauSauCheTac']}}"><span>{{data.anhMauSauCheTac}}</span><strong>Choose file</strong></label>
+						<label for="anhMauSauCheTac" title="{{tooltips['anhMauSauCheTac']}}"><span>{{getName(data.anhMauSauCheTac)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr><td><label>45. Thông tin DNA</label></td></tr>
@@ -509,7 +508,7 @@
 					<td>Đính kèm trình tự DNA</td>
 					<td>
 						<input type="file" multiple ng-model="data.dinhKemTrinhTuDNA" id="dinhKemTrinhTuDNA" name="dinhKemTrinhTuDNA" accept=".doc, .docx, .pdf" class="inputfile customfile">
-						<label for="dinhKemTrinhTuDNA" title="{{tooltips['dinhKemTrinhTuDNA']}}"><span>{{data.dinhKemTrinhTuDNA}}</span><strong>Choose file</strong></label>
+						<label for="dinhKemTrinhTuDNA" title="{{tooltips['dinhKemTrinhTuDNA']}}"><span>{{getName(data.dinhKemTrinhTuDNA)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
@@ -534,7 +533,7 @@
 					</td>
 					<td>
 						<input type="file" multiple ng-model="data.phanBoVietNamFile" class="inputfile customfile" id="phanBoVietNamFile" name ="phanBoVietNamFile">
-						<label for="phanBoVietNamFile" title="{{tooltips['phanBoVietNamFile']}}"><span>{{data.phanBoVietNamFile}}</span><strong>Choose file</strong></label>
+						<label for="phanBoVietNamFile" title="{{tooltips['phanBoVietNamFile']}}"><span>{{getName(data.phanBoVietNamFile)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
@@ -546,7 +545,7 @@
 					</td>
 					<td>
 							<input type="file" id="phanBoTrenTheGioiFile" multiple ng-model="data.phanBoTrenTheGioiFile" class="inputfile customfile" name ="phanBoTrenTheGioiFile">
-							<label for="phanBoTrenTheGioiFile" title="{{tooltips['phanBoTrenTheGioiFile']}}"><span>{{data.phanBoTrenTheGioiFile}}</span><strong>Choose file</strong></label>
+							<label for="phanBoTrenTheGioiFile" title="{{tooltips['phanBoTrenTheGioiFile']}}"><span>{{getName(data.phanBoTrenTheGioiFile)}}</span><strong>Choose file</strong></label>
 						</td>
 				</tr>
 				<tr>
@@ -644,14 +643,14 @@
 					<td><label>60. Giấy phép nhập mẫu:</label></td>
 					<td>
 						<input type="file" multiple id="giayPhepNhapMau" ng-model="data.giayPhepNhapMau" name="giayPhepNhapMau" class="inputfile customfile" accept="image/*, .pdf">
-						<label for="giayPhepNhapMau" title="{{tooltips['giayPhepNhapMau']}}"><span>{{data.giayPhepNhapMau}}</span><strong>Choose file</strong></label>
+						<label for="giayPhepNhapMau" title="{{tooltips['giayPhepNhapMau']}}"><span>{{getName(data.giayPhepNhapMau)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
 					<td><label>61. Hồ sơ nhập mẫu vật đi kèm:</label></td>
 					<td>
 						<input type="file" multiple ng-model="data.hoSoNhapMauVatDiKem" id="hoSoNhapMauVatDiKem" name="hoSoNhapMauVatDiKem" class="inputfile customfile" accept=".doc, .docx, .pdf">
-						<label for="hoSoNhapMauVatDiKem" title="{{tooltips['hoSoNhapMauVatDiKem']}}"><span>{{data.hoSoNhapMauVatDiKem}}</span><strong>Choose file</strong></label>
+						<label for="hoSoNhapMauVatDiKem" title="{{tooltips['hoSoNhapMauVatDiKem']}}"><span>{{getName(data.hoSoNhapMauVatDiKem)}}</span><strong>Choose file</strong></label>
 					</td>
 				</tr>
 				<tr>
